# manifesto-contract

./: .gitignore  Cargo.toml  README.md  addresses.json
contracts/cw-1124/: Cargo.toml
contracts/cw-1124/examples/: schema.rs
contracts/cw-1124/src/: contract.rs  lib.rs  state.rs
contracts/manifesto/: Cargo.toml  README.md
contracts/manifesto/examples/: schema.rs
contracts/manifesto/schema/: config.json  config_response.json  execute_msg.json  instantiate_msg.json  medal_execute_msg.json  medal_meta_data.json  mint_msg.json  query_msg.json  signature.json  signature_response.json  state.json  state_response.json
contracts/manifesto/src/: contract.rs  state.rs
contracts/medal/: Cargo.toml
contracts/medal/examples/: schema.rs
contracts/medal/schema/: execute_msg_for__nullable__metadata.json  metadata.json  mint_msg_for__nullable__metadata.json
contracts/medal/src/: execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/medal_redeemed/: Cargo.toml
contracts/medal_redeemed/examples/: schema.rs
contracts/medal_redeemed/schema/: execute_msg_for__nullable__metadata.json
manifesto/: Cargo.toml  NOTICE  README.md
manifesto/artifacts/: checksums.txt  manifesto_contract.wasm
manifesto/schema/: handle_msg.json  query_msg.json  state.json
manifesto/src/: contract.rs  lib.rs  msg.rs  state.rs
nft_art/: medal_redeemed_token_uri.json  medal_token_uri.json
scripts/: deploy_script.ts  helpers.mjs  helpers.ts  localterra_script.js  mainnet_script.js  mainnet_script.ts  manifesto_utils.js  manifesto_utils.ts  medal_utils.ts  package-lock.json  package.json  testnet_script.js  testnet_script.ts  transfer_script.ts  tsconfig.json
(+2 files in other folders)
