[workspace]
members = [
    "contracts/manifesto", 
     "contracts/medal", 
     "contracts/medal_redeemed", 
    "packages/*"
]


[profile.release.package.mars-community]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
