[package]
name = "manifesto"
version = "1.0.0"
authors = ["_astromartian"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-community = { path = "../../packages/mars_community" }
cw721 = { version = "0.9.2" }
cw721-base = {  version = "0.9.2", features = ["library"] }
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.8.0"
cosmwasm-bignumber = "1.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }


[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-vm = "0.16.0"